# ISRT

./: .gitignore  README.md  isrt.py  isrt_monitor.py  pyproject.toml
db/: isrt_data.db
isrt/: __init__.py  __main__.py  cli.py  config.py  rcon.py
modules/: config.py  custom_elements.py  definitions.py  map_manager.py  mutators.py  query.py  rcon.py  server_manager.py
tests/: test_cli.py  test_config.py  test_rcon.py
